security: fix path traversal on GET /api/files/read and GET /api/files/view (Traceable 96a4da46, 6d7ca65f)