@@ -7,7 +7,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Map;
+import java.nio.file.Paths;
 
 @RestController
 @RequestMapping("/api/files")
@@ -16,39 +16,39 @@ public class FileController {
     private static final String BASE_DIR = "/tmp/app-files/";
 
     @GetMapping("/read")
-    public ResponseEntity<?> readFile(@RequestParam String filename) {
+    public ResponseEntity<String> readFile(@RequestParam String filename) {
         try {
-            Path basePath = Path.of(BASE_DIR).toAbsolutePath().normalize();
-            Path resolved = basePath.resolve(filename).normalize();
-            if (!resolved.startsWith(basePath)) {
-                return ResponseEntity.badRequest().body(Map.of("error", "Invalid path"));
+            Path basePath = Paths.get(BASE_DIR).toAbsolutePath().normalize();
+            Path resolvedPath = basePath.resolve(filename).normalize();
+            if (!resolvedPath.startsWith(basePath)) {
+                return ResponseEntity.badRequest().body("Error: Invalid file path");
             }
-            File file = resolved.toFile();
+            File file = resolvedPath.toFile();
             if (!file.exists()) {
                 return ResponseEntity.notFound().build();
             }
-            String content = new String(Files.readAllBytes(resolved));
+            String content = new String(Files.readAllBytes(resolvedPath));
             return ResponseEntity.ok(content);
-        } catch (IOException e) {
+        } catch (Exception e) {
             return ResponseEntity.internalServerError().body("Error: " + e.getMessage());
         }
     }
 
     @GetMapping("/view")
-    public ResponseEntity<?> viewFile(@RequestParam String path) {
+    public ResponseEntity<String> viewFile(@RequestParam String path) {
         try {
-            Path basePath = Path.of(BASE_DIR).toAbsolutePath().normalize();
-            Path resolved = Path.of(path).toAbsolutePath().normalize();
-            if (!resolved.startsWith(basePath)) {
-                return ResponseEntity.badRequest().body(Map.of("error", "Invalid path"));
+            Path basePath = Paths.get(BASE_DIR).toAbsolutePath().normalize();
+            Path resolvedPath = Paths.get(path).toAbsolutePath().normalize();
+            if (!resolvedPath.startsWith(basePath)) {
+                return ResponseEntity.badRequest().body("Error: Access denied - path outside allowed directory");
             }
-            File file = resolved.toFile();
+            File file = resolvedPath.toFile();
             if (!file.exists() || file.isDirectory()) {
                 return ResponseEntity.notFound().build();
             }
-            String content = new String(Files.readAllBytes(resolved));
+            String content = new String(Files.readAllBytes(resolvedPath));
             return ResponseEntity.ok(content);
-        } catch (IOException e) {
+        } catch (Exception e) {
             return ResponseEntity.internalServerError().body("Error: " + e.getMessage());
         }
     }
@@ -56,12 +56,12 @@ public class FileController {
     @GetMapping("/list")
     public ResponseEntity<?> listDirectory(@RequestParam(defaultValue = "") String dir) {
         try {
-            Path basePath = Path.of(BASE_DIR).toAbsolutePath().normalize();
-            Path resolved = basePath.resolve(dir).normalize();
-            if (!resolved.startsWith(basePath)) {
-                return ResponseEntity.badRequest().body(Map.of("error", "Invalid path"));
+            Path basePath = Paths.get(BASE_DIR).toAbsolutePath().normalize();
+            Path resolvedPath = basePath.resolve(dir).normalize();
+            if (!resolvedPath.startsWith(basePath)) {
+                return ResponseEntity.badRequest().body("Error: Invalid directory path");
             }
-            File directory = resolved.toFile();
+            File directory = resolvedPath.toFile();
             if (!directory.exists() || !directory.isDirectory()) {
                 return ResponseEntity.badRequest().body("Not a directory");
             }
